# roscourse_2023

./: .gitignore  CMakeLists.txt  package.xml
config/: diff_control.yaml
launch/: start_scene.launch
models/: .gitignore  Subaru_Impreza.stl
models/diff_drive_robot/urdf/: diff_drive_robot.xacro  inertial.urdf.xacro  rviz_conf.rviz  wheel.xacro
models/project_robot/urdf/: diff_drive_robot.gazebo  diff_drive_robot.xacro  materials.xacro  robot_model.xacro  rviz_conf.rviz  setup.gazebo  wheel.xacro
scripts/: lidar.py  lidar_processing.py
worlds/: simple_scene.world
