<package format="2">
  <version>1.0.0</version>
  <name>roscourse_2023_project_scene</name>
  <description>Gazebo example for ITMO ROS couse project</description>

  <author     email="likerobotics@gmail.com">Islam Bzhikhatlov</author>
  <maintainer email="likerobotics@gmail.com">Islam Bzhikhatlov</maintainer>

  <license>Apache License, Version 2.0</license>

  <url type="website">https://likerobotics.ru/ros_course</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <!-- <gazebo_ros gazebo_model_path="~/catkin_ws/src/roscourse_2023_project_scene/models"/> -->
  </export>

</package>
